Fix header padding so nav links are visible

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
 	top: 0px;
 	width: 100%;
 	height: auto;
-	padding: 10px 40px;
+	padding: 20px 40px;
 }
 
 /* headings */
